Added Google OR as another ILP solver